<resources>
    <string name="app_name">ProjectManager</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="text_password">Password</string>
    <string name="title_activity_projects">Projects</string>
    <string name="action_logout">Logout</string>
    <string name="action_new_project">New project</string>
    <string name="title_activity_new_project">New Project</string>
    <string name="text_description">Description</string>
    <string name="text_new_project_name">Name</string>
    <string name="text_deadline">Deadline(dd-mm-yyyy)</string>
    <string name="text_mail_contributor">Contributor Mail</string>
    <string name="text_id_contributor">Id Contributor</string>
    <string name="action_add_contributor">Add Contributor</string>
    <string name="action_create_project">Create Project</string>
    <string name="text_remember_me">Remember me</string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login_activity">Sign in</string>

    <string name="text_mail">Mail</string>
    <string name="text_first_name">First name</string>
    <string name="text_second_name">Second name</string>
    <string name="title_activity_project_more">ProjectMoreActivity</string>
    <string name="text_progress">Progress</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="action_create_task">Create task</string>
    <string name="text_tasks">Tasks</string>
    <string name="title_activity_task_more">TaskMoreActivity</string>
    <string name="text_finish_task">Finish Task</string>
    <string name="title_activity_contributors">ContributorsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
